@@ -1224,14 +1224,16 @@ BEGIN
     RTEXT           "Static",IDC_ZIOOTHER_V,184,57,63,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZIOOTHERBYTES_V,184,67,63,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZIOPRIORITY_V,184,77,63,8,SS_ENDELLIPSIS
-    GROUPBOX        "Other",IDC_STATIC,131,92,122,60
+    GROUPBOX        "Other",IDC_STATIC,131,92,122,70
     LTEXT           "Handles",IDC_STATIC,138,102,26,8
-    LTEXT           "GDI Handles",IDC_STATIC,138,112,40,8
-    LTEXT           "USER Handles",IDC_STATIC,138,122,46,8
+    LTEXT           "GDI Handles",IDC_STATIC,138,122,40,8
+    LTEXT           "USER Handles",IDC_STATIC,138,132,46,8
     RTEXT           "Static",IDC_ZHANDLES_V,193,102,54,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZGDIHANDLES_V,193,112,54,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZUSERHANDLES_V,193,122,54,8,SS_ENDELLIPSIS
-    PUSHBUTTON      "Details",IDC_DETAILS,137,133,50,14
+    RTEXT           "Static",IDC_ZGDIHANDLES_V,193,122,54,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZUSERHANDLES_V,193,132,54,8,SS_ENDELLIPSIS
+    PUSHBUTTON      "Details",IDC_DETAILS,137,143,50,14
+    LTEXT           "Peak Handles",IDC_STATIC,138,112,44,8
+    RTEXT           "Static",IDC_ZPEAKHANDLES_V,192,112,55,8,SS_ENDELLIPSIS
 END
 
 IDD_OPTADVANCED DIALOGEX 0, 0, 250, 95
